--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -85,6 +85,7 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
   max-width: 1100px;
   width: 100%;
   padding: 0 30px;
+  border: 1px solid pink;
 }
 
 /*----- 見出し -----*/
@@ -162,7 +163,8 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
 .page-lead{
   font-size: 12px;
   max-width: 600px;
-  margin: 40px auto 0;
+  margin: 0px auto ;
+  padding: 40px 0 160px;
 }
 
 /* パンクズ */
@@ -254,7 +256,7 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
       height: 190px;
       position: fixed;
       right: 0;
-      top: 50%;
+      top: 35%;
       display: none;
     }
   }
@@ -414,6 +416,7 @@ section{
   /* 下層ページのリード文 */
   .page-lead{
     font-size: 16px;
+    padding: 40px 0 190px;
   }
 
   /* パンクズ */
@@ -1022,6 +1025,8 @@ section{
 /* cta */
 /* -------------------------------------------- */
 .cta{
+  padding-top: 100px;
+
   &__image{
     width: 58%;
     display: block;
@@ -1046,6 +1051,7 @@ section{
   .cta{
     max-width: 708px;
     margin: 0 auto;
+    padding-top: 290px;
     &__image{
       width: 100%;
     }
@@ -1299,11 +1305,179 @@ section{
 }
 
 /* -------------------------------------------- */
-/*  */
+/* about */
 /* -------------------------------------------- */
+.page{
+  &__wrap{
+    position: relative;
+    // border: 1px solid #000;
+  }
 
+  &__image-wrap{
+    img{
+      width: 100%;
+    }
+  }
+
+  &__image-desc{
+    font-size: 10px;
+    transform: scale(0.8);
+    margin-top: 10px;
+    transform-origin: 0 0;
+    display: block;
+    letter-spacing: 0.02em;
+    white-space: nowrap;
+    line-height: 1;
+  }
+}
+
+.about__cont{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.tar{
+  text-align: right;
+}
+
+/* 縦組み */
+.tver{
+  writing-mode: vertical-rl;
+}
+
+.pab{
+  position: absolute;
+}
+
+.about-img{
+  &-01{
+    margin-right: calc(65 / 375 *100vw);
+  }
+
+  &-02{
+    margin-top:  calc(-60 / 375 *100vw);
+    margin-right: calc(50% - 50vw);
+    margin-left:  calc(194 / 375 *100vw);
+  }
+  
+  &-03{
+    margin-right: calc(158 / 375 *100vw);
+    margin-top: calc(-115 / 375 *100vw);
+  }
+
+  &-04{
+    margin-top: 50px;
+    margin-left: calc(83 / 375 *100vw);
+
+    .page__image-desc{
+      top: 0;
+      left: -7%;
+      margin-top: 0;
+    }
+  }
+
+  &-05{
+    margin-right: calc(186 / 375 *100vw);
+    margin-top: calc(-12 / 375 *100vw);;
+  }
+
+  &-06{
+    margin-right: calc(66 / 375 *100vw);
+    margin-left: calc(50% - 50vw);
+
+    .page__image-desc{
+      transform-origin: 100% 0;
+    }
+  }
+  
+  &-07{
+    .page__image-desc{
+      transform-origin: 100% 0;
+    }
+  }
+}
 
 @media (min-width: 765px) {
+  .page{
+  
+    &__image-desc{
+      font-size: 13px;
+      transform: scale(1);
+      margin-top: 26px;
+    }
+  }
+  
+  /* 画像no.6, no.7のコンテナ */
+  .about__cont{
+    margin-top: 116px;
+  }
+
+  .about-img{
+    &-01{
+      max-width: 660px;
+      margin-right: auto;
+      margin-right: calc(384 / 1440 *100vw);
+      left: calc(-70 / 1440 *100vw);
+    }
+  
+    &-02{
+      max-width: 362px;
+      margin-right: 0;
+      right: calc(-70 / 1440 *100vw);
+      margin-left: auto;
+      margin-top:  calc(-156 / 1440 *100vw);
+
+      .page__image-desc{
+        text-align: right;
+      }
+    }
+    
+    &-03{
+      max-width: 605px;
+      margin-top: calc(-291 / 1440 *100vw);
+      margin-left: calc(85 / 1440 *100vw);
+      margin-right: calc(328 /1440 * 100vw);
+
+      .page__image-desc{
+        position: relative;
+        top: 0;
+        left: -50px;
+      }
+    }
+  
+    &-04{
+      max-width: 704px;
+      margin-left: calc(341 / 1440*100vw);
+      margin-top: 220px;
+  
+      .page__image-desc{
+        top: 0;
+        left: -6%;
+        margin-top: 0;
+      }
+    }
+  
+    &-05{
+      max-width: 413px;
+      margin-right: 0;
+      margin-top: 0;
+      margin-right: calc(630 / 1440 *100vw);
+      margin-top: calc(-140 / 1440 *100vw);
+    }
+  
+    &-06{
+      max-width: 400px;
+      margin-right: calc(230 / 1440 *100vw);
+      margin-left: 0;
+      left: calc(-70 / 1440 *100vw);
+    }
+    
+    &-07{
+      max-width: 485px;
+    }
+  }
 
 
 }
@@ -1314,12 +1488,180 @@ section{
 }
 
 /* -------------------------------------------- */
-/*  */
+/* style */
 /* -------------------------------------------- */
+.style{
 
+  &__type{
+  letter-spacing: 0.05em;
+  font-weight: 700;
+  position: absolute;
+  }
+}
+
+.style-img{
+  &-01{
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(55 / 375 *100vw);
+
+    .style__type{
+      top: 0;
+      right: -6%;
+      margin-top: 0;
+    }
+  }
+
+  &-02{
+    margin-left: calc(108 / 375 *100vw);
+    margin-top: calc(-80 / 375 *100vw);
+
+    .page__image-desc{
+      line-height: 1.6;
+    }
+  }
+  
+  &-03{
+    margin-right: calc(50% - 50vw);
+    margin-top: 30px;
+  }
+
+  &-04{
+    margin-left: calc(50% - 50vw);
+    margin-top: 50px;
+
+    .style__type{
+      right: 0;
+      top: 20px;
+    }
+
+    .page__image-desc{
+      padding-left: 30px;
+    }
+
+  }
+
+  &-05{
+    margin-left: calc(105 / 375 *100vw);
+    margin-top: 30px;
+  }
+
+  &-06{
+    margin-right: calc(168 / 375 *100vw);
+    margin-top: calc(-194 / 375 *100vw);
+  }
+  
+  &-07{
+    margin-top: 80px;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(10 / 375 *100vw);
+
+    .page__image-desc{
+      position: absolute;
+      left: 10%;
+      top: -25px;
+    }
+  }
+
+  &-08{
+    margin-right: calc(142 / 375 *100vw);
+    margin-left: calc(32 / 375 *100vw);
+    margin-top: calc(-38 / 375 *100vw);
+
+    .style__type{
+      top: 0;
+      right: -8%;
+      margin-top: 0;
+      display: none;
+    }
+  }
+  
+  &-09{
+    margin-right: calc(30 / 375 *100vw);
+    margin-left: calc(147 / 375 *100vw);
+    margin-top: calc(-123 / 375 *100vw);
+  }
+  
+}
 
 @media (min-width: 765px) {
+  .style{
 
+  }
+  
+  .style-img{
+    &-01{
+      max-width: 644px;
+      margin-left: calc(149 / 1440 *100vw);
+      margin-right: calc(256 / 1440 *100vw);
+    }
+  
+    &-02{
+      max-width: 320px;
+      margin-left: calc(725 / 1440 *100vw);
+      margin-top: calc(-349 / 1440 *100vw);
+    }
+    
+    &-03{
+      margin-right: auto;
+      margin-top: calc(-53 / 1440 *100vw);
+      max-width: 605px;
+    }
+  
+    &-04{
+      margin-top: 180px;
+      margin-left: calc(303 / 1440 *100vw);
+      max-width: 743px;
+  
+      .page__image-desc{
+        padding-left: 30px;
+        text-align: right;
+      }
+    }
+  
+    &-05{
+      margin-left: 0;
+      max-width: 383px;
+      margin-right: calc(657 / 1440 *100vw);
+      margin-top: calc(-789 / 1440 *100vw);
+    }
+    
+    &-06{
+      max-width: 303px;
+      margin-left: calc(121 / 1440 *100vw);
+      margin-right: calc(622 / 1440 *100vw);
+      margin-top: calc(-19 / 1440 *100vw);
+    }
+    
+    &-07{
+      max-width: 628px;
+      margin-right: calc(444 / 1440 *100vw);
+      margin-left: calc(-26 / 1440 *100vw);
+      margin-top: 178px;
+  
+      .page__image-desc{
+        top: 100%;
+        left: 15%;
+      }
+    }
+  
+    &-08{
+      max-width: 287px;
+      margin-left: calc(555 / 1440 *100vw);
+      margin-right: calc(204 / 1440 *100vw);
+      margin-top: calc(-726 / 1440 *100vw);
+
+      .style__type{
+        display: block;
+      }
+    }
+    
+    &-09{
+      max-width: 309px;
+      margin-top: calc(-47 / 1440 *100vw);
+      margin-right: calc(70 / 1440 *100vw);
+      margin-left: calc(667 / 1440 *100vw);
+    }
+  }
 
 }
 
@@ -1329,12 +1671,137 @@ section{
 }
 
 /* -------------------------------------------- */
-/*  */
+/* menu */
 /* -------------------------------------------- */
+.menu{
 
+  &__wrap{
+    padding: 0 25px;
+  }
+
+  &__flex{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__title{
+    font-size: 12px;
+    border-bottom: 1px solid #AA9F9F;
+    padding-bottom: 10px;
+    font-weight: 400;
+    margin-top: 30px;
+  }
+  
+  &__price{
+    font-weight: 700;
+  }
+
+  &__list{
+    margin-top: 25px;
+    font-size: 12px;
+  }
+  
+  &__list-item{
+    border-bottom: 0.5px solid #D3D3D3;
+    padding: 15px 0 10px;
+  }
+
+  &__other{
+    margin-top: 40px;
+  }
+
+  &__tax{
+    font-size: 10px;
+    color:#7B7B7B;
+    margin-top: 150px;
+    margin-top: 50px;
+    line-height: 1;
+  }
+  
+  &__attention{
+    font-size: 10px;
+    color:#7B7B7B;
+    margin-top: 30px;
+    margin-top: 15px;
+  }
+}
+
+.mt60{
+  margin-top: 60px;
+}
 
 @media (min-width: 765px) {
+  .menu{
 
+    &__wrap{
+      padding: 0;
+    }
+
+    &__cont{
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      margin-top: 50px;
+
+      &.--other{
+        max-height: 630px;
+
+        .menu__title{
+          &:first-child{
+            margin-top: 0;
+          }
+        }
+      }
+    }
+  
+    &__title{
+      font-size: 16px;
+      width: 38.5%;
+    }
+  
+    &__list{
+      width: 38.5%;
+      font-size: 16px;
+    }
+    
+    &__list-item{
+      padding: 30px 0 15px;
+
+      &:first-child{
+        padding-top: 0;
+      }
+    }
+  
+    &__other{
+      margin-top: 0px;
+    }
+
+    &__bottom{
+      width: 38.5%
+    }
+
+    &__tax{
+      font-size: 15px;
+      margin-top: 150px;
+    }
+    
+    &__attention{
+      font-size: 15px;
+      margin-top: 30px;
+    }
+  }
+
+  .mt60{
+    margin-top: 150px;
+  }
+
+  .mt150{
+    margin-top: 150px;
+  }
+
+  .mra{
+    margin-left: auto;
+  }
 
 }
 
